--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
             <div class="animSlider vh-100 vw-100 position-absolute"></div>
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="https://livejs.com/live.js"></script>
+        <!-- <script type="text/javascript" src="https://livejs.com/live.js"></script> -->
         <script src="https://kit.fontawesome.com/1cf0552cf6.js" crossorigin="anonymous"></script>
         <script src="assets/js/main.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
         AOS.init();
         </script>
+        <script src="assets/js/live.js"></script>
     </body>
 </html>
