--- a/index.html
+++ b/index.html
@@ -9,41 +9,167 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
             integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
             crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        ></script>
+            referrerpolicy="no-referrer"></script>
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-            crossorigin="anonymous"
-        >
+            crossorigin="anonymous">
         <link rel="stylesheet" href="assets/css/main.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
     <body class="overflow-x-hidden">
+        </div>
         <main>
             <!-- navbar -->
             <div class="d-flex flex-row-reverse p-3 p-lg-5">
                 <div class="burger-container" id="burgerMenuBtn">
-                    <div class="bar bar1"></div>
+                    <div class="bar bar1" id="bar"></div>
                     <div class="bar bar2"></div>
                     <div class="bar bar3"></div>
                 </div>
             </div>
             <div class="navOverlay vh-100 vw-100">
-              Hello world
+                <div class="overlay-content">
+                    <a class="navlink" href="#">Home</a>
+                    <a class="navlink" href="#">About</a>
+                    <a class="navlink" href="#">Work</a>
+                    <a class="navlink" href="#">Projects</a>
+                    <a class="navlink" href="#">Contact</a>
+                </div>
             </div>
             <!-- this div will slide out full screen when navlinks are clicked -->
             <div class="animSlider vh-100 vw-100 position-absolute"></div>
         </main>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        
+        <div id="particles-js">
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
         <!-- <script type="text/javascript" src="https://livejs.com/live.js"></script> -->
-        <script src="https://kit.fontawesome.com/1cf0552cf6.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/1cf0552cf6.js"
+            crossorigin="anonymous"></script>
         <script src="assets/js/main.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
         AOS.init();
         </script>
         <script src="assets/js/live.js"></script>
+        <script src="assets/js/particle.js"></script>
+        <script>
+particlesJS("particles-js", 
+{
+  "particles": {
+    "number": {
+      "value": 80,
+      "density": {
+        "enable": true,
+        "value_area": 800
+      }
+    },
+    "color": {
+      "value": "#ffffff"
+    },
+    "shape": {
+      "type": "circle",
+      "stroke": {
+        "width": 0,
+        "color": "#000000"
+      },
+      "polygon": {
+        "nb_sides": 5
+      },
+      "image": {
+        "src": "img/github.svg",
+        "width": 100,
+        "height": 100
+      }
+    },
+    "opacity": {
+      "value": 0.5,
+      "random": false,
+      "anim": {
+        "enable": false,
+        "speed": 1,
+        "opacity_min": 0.1,
+        "sync": false
+      }
+    },
+    "size": {
+      "value": 3,
+      "random": true,
+      "anim": {
+        "enable": false,
+        "speed": 40,
+        "size_min": 0.1,
+        "sync": false
+      }
+    },
+    "line_linked": {
+      "enable": true,
+      "distance": 150,
+      "color": "#ffffff",
+      "opacity": 0.4,
+      "width": 1
+    },
+    "move": {
+      "enable": true,
+      "speed": 6,
+      "direction": "none",
+      "random": false,
+      "straight": false,
+      "out_mode": "out",
+      "bounce": false,
+      "attract": {
+        "enable": false,
+        "rotateX": 600,
+        "rotateY": 1200
+      }
+    }
+  },
+  "interactivity": {
+    "detect_on": "canvas",
+    "events": {
+      "onhover": {
+        "enable": true,
+        "mode": "repulse"
+      },
+      "onclick": {
+        "enable": true,
+        "mode": "push"
+      },
+      "resize": true
+    },
+    "modes": {
+      "grab": {
+        "distance": 400,
+        "line_linked": {
+          "opacity": 1
+        }
+      },
+      "bubble": {
+        "distance": 400,
+        "size": 40,
+        "duration": 2,
+        "opacity": 8,
+        "speed": 3
+      },
+      "repulse": {
+        "distance": 200,
+        "duration": 0.4
+      },
+      "push": {
+        "particles_nb": 4
+      },
+      "remove": {
+        "particles_nb": 2
+      }
+    }
+  },
+  "retina_detect": true
+}
+);
+        </script>
     </body>
 </html>
