--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </head>
     <body class="overflow-hidden">
         </div>
-        <main>
+        <main class="content">
             <!-- navbar -->
             <div class="d-flex flex-row-reverse p-3 p-lg-5">
                 <div class="burger-container" id="burgerMenuBtn">
@@ -40,8 +40,8 @@
             </div>
             
             <!-- this div will slide out full screen when navlinks are clicked -->
-            <div class="vh-100 vw-100 position-absolute"></div>
-            <div class="d-none d-lg-block sidenav vh-100 position-absolute px-3">
+            <div class="animSlider vh-100 vw-100 position-absolute"></div>
+            <div class="sidenav vh-100 position-absolute px-3">
                 <div class="vl my-2"></div>
                 <a class="nav-icons d-block fs-4 py-2 text-gray" href="">
                     <i class="fa-brands fa-square-instagram"></i>
@@ -56,22 +56,7 @@
                     <i class="fa-brands fa-github"></i>
                 </a>
             </div>
-            <div class="d-flex d-lg-none fixed-bottom justify-content-center py-3">
-                <a class="nav-icons fs-4 px-3 text-gray" href="">
-                    <i class="fa-brands fa-square-instagram"></i>
-                </a>
-                <a class="nav-icons fs-4 px-3 text-gray" href="">
-                    <i class="fa-brands fa-facebook"></i>
-                </a>
-                <a class="nav-icons fs-4 px-3 text-gray" href="">
-                    <i class="fa-brands fa-linkedin"></i>
-                </a>
-                <a class="nav-icons fs-4 px-3 text-gray" href="">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-            </div>
-            <div class="container">
-                main content goes here
+            <div class="main-content container">
             </div>
         </main>
         <div id="particles-js"></div>
